--- a/OptionStrategy/OptionStrategy.csproj
+++ b/OptionStrategy/OptionStrategy.csproj
@@ -61,6 +61,7 @@
     <Compile Include="OSWrapper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TickerData.cs" />
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
