--- a/OptionStrategy/OptionStrategy.csproj
+++ b/OptionStrategy/OptionStrategy.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="AbstractIBWrapper.cs" />
     <Compile Include="DataHandler.cs" />
+    <Compile Include="DataHandler2.cs" />
     <Compile Include="Formatter.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
@@ -59,6 +60,7 @@
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
     <Compile Include="OSWrapper.cs" />
+    <Compile Include="OSWrapper2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TickerData.cs" />
@@ -86,6 +88,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="tickersList.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
